changed team members to assign reasearch team

--- a/project_new.html
+++ b/project_new.html
@@ -486,7 +486,7 @@
    
 
         <section class="team-management">
-            <h2>Team Management</h2>
+            <h2>Assign Research Team</h2>
             <div class="team-options">
                 <div class="team-option">
                     <i class="material-icons">person_add</i>
