--- a/project_new.html
+++ b/project_new.html
@@ -40,31 +40,47 @@
             padding: 20px;
             box-shadow: var(--shadow);
             height: fit-content;
+            position: sticky;
+            top: 24px;
         }
 
         .sidebar h2 {
             color: var(--fsu-garnet);
+            font-family: 'GothicCustom', sans-serif;
+            margin-bottom: 20px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
         }
 
         .sidebar-item {
-            /* display: flex; */
+            display: flex;
             align-items: center;
             padding: 12px;
             margin: 8px 0;
             border-radius: 6px;
             cursor: pointer;
-            transition: background-color 0.2s;
-            color: #782f40;
-            /* word-break: break-word; */
+            transition: var(--transition);
+            color: var(--fsu-garnet);
         }
 
         .sidebar-item:hover {
-            background-color: #f5f5f5;
+            background-color: rgba(255, 255, 255, 0.2);
+            transform: translateX(5px);
+        }
+
+        .sidebar-item.active {
+            background-color: var(--fsu-garnet);
+            color: var(--fsu-gold);
+        }
+
+        .sidebar-item.active i {
+            color: var(--fsu-gold);
         }
 
         .sidebar-item i {
             margin-right: 12px;
             color: var(--fsu-garnet);
+            font-size: 20px;
         }
 
         .main-content {
@@ -443,14 +459,14 @@
 </head>
 <body>
     <nav class="sidebar">
-        <h2>Navigation</h2>
+        <h2>Athlyte</h2>
         <div class="sidebar-item">
             <i class="material-icons">search</i>
             Research
         </div>
         <div class="sidebar-item">
             <i class="material-icons">description</i>
-            Content Draft
+            Content draft
         </div>
         <div class="sidebar-item">
             <i class="material-icons">brush</i>
@@ -461,7 +477,7 @@
             Marketing
         </div>
         <div class="sidebar-item">
-            <i class="material-icons">search</i>
+            <i class="material-icons">equalizer</i>
             Analytics
         </div>
     </nav>
