updated project status bar text

--- a/project_new.html
+++ b/project_new.html
@@ -1588,7 +1588,7 @@ document.addEventListener('DOMContentLoaded', function() {
         
         let statusClass = 'in progress';
         let statusText = 'In Progress';
-        let statusIcon = 'sync';
+        let statusIcon = 'hourglass_empty';
         
         if (completedSteps === totalSteps) {
             statusClass = 'completed';
