Added space between researcg grid and comments section

--- a/project_new_research_page.html
+++ b/project_new_research_page.html
@@ -210,6 +210,12 @@
             padding: 24px;
         }
 
+        /* Or add space between the two main content sections */
+        .main-content + .main-content {
+            margin-top: 40px; /* Adjust as needed */
+        }
+
+
         .header {
             margin-bottom: 24px;
         }
