Linked to research page

--- a/project_new.html
+++ b/project_new.html
@@ -928,7 +928,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/d5/Florida_State_Seminoles_logo.svg/1200px-Florida_State_Seminoles_logo.svg.png" alt="FSU Logo" width="100">
         <div class="sidebar-item">
             <i class="material-icons">search</i>
-            Research
+            <a href="project_new_research_page.html"> Research </a>
         </div>
         <div class="sidebar-item">
             <i class="material-icons">description</i>
