Linked to contet draft page

--- a/project_new.html
+++ b/project_new.html
@@ -932,7 +932,7 @@
         </div>
         <div class="sidebar-item">
             <i class="material-icons">description</i>
-            Content draft
+            <a href="project_new_content_draft.html"> Content Draft </a>
         </div>
         <div class="sidebar-item">
             <i class="material-icons">brush</i>
