Updated link to project new page

--- a/project_new_research_page.html
+++ b/project_new_research_page.html
@@ -1426,7 +1426,7 @@ textarea.form-input {
         <img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/d5/Florida_State_Seminoles_logo.svg/1200px-Florida_State_Seminoles_logo.svg.png" alt="FSU Logo" width="100">
         <div class="nav-item">
             <i class="material-icons">home</i>
-            <a href="project_new.html"> home</a>
+            <a href="project_new.html"> Home</a>
         </div>
         <div class="nav-item active">
             <i class="material-icons">search</i>
