Changed from basketball to football in header

--- a/project_new.html
+++ b/project_new.html
@@ -950,7 +950,7 @@
 
     <main class="main-content">
         <header class="header">
-            <h1>FSU Basketball Season Recap</h1>
+            <h1>FSU Football Season Recap</h1>
             <div class="header-meta">
                 <div>
                     <i class="material-icons">person</i>
