Changed to Research co-ord

--- a/project_new_research_page.html
+++ b/project_new_research_page.html
@@ -1463,7 +1463,7 @@ textarea.form-input {
                     <div class="info-item">
                         <i class="material-icons">person</i>
                         <div class="info-content">
-                            <span class="info-label">Project Coordinator</span>
+                            <span class="info-label">Research Coordinator</span>
                             <span class="info-value">Sarah Johnson</span>
                         </div>
                     </div>
