--- a/project_new_content_draft.html
+++ b/project_new_content_draft.html
@@ -40,13 +40,15 @@
             gap: 24px;
         }
 
-        /* FSU Header Styles */
+       /* Visual container dividers */
+
+/* Add divider between FSU header and Content Drafts section */
 .fsu-header {
-    background-color: white;
-    padding: 15px 20px;
-    border-radius: 10px;
-    margin-bottom: 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    position: relative;
+    padding-bottom: 20px;
+    margin-bottom: 30px;
+    box-shadow: none;
+    border-bottom: 1px solid rgba(206, 184, 136, 0.5); /* Subtle FSU gold border */
 }
 
 .header-container {
@@ -719,14 +721,26 @@
             color: white;
         }
 
-        /* Saved Content Section Styles */
+        /* Add divider between Content Drafts section and Comments section */
 .saved-content-section {
-    background: white;
-    border-radius: 8px;
-    padding: 24px;
-    box-shadow: var(--shadow);
-    margin-top: 24px;
-    height: min-content;
+    position: relative;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+    border-bottom: 1px solid rgba(206, 184, 136, 0.5); /* Subtle FSU gold border */
+}
+
+/* Optional: Add a slight visual indication that these are separate sections */
+.fsu-header:after, 
+.saved-content-section:after {
+    content: '';
+    position: absolute;
+    bottom: -6px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 50px;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--fsu-garnet);
 }
 
 .saved-content-section .content-header {
@@ -870,12 +884,13 @@
     }
 }
 
-/* Enhanced Comments Section Styles */
+/* Style the Comments section as a distinct container */
 .comments-section {
-    background: white;
-    border-radius: 10px;
-    padding: 24px;
-    margin-top: 20px;
+    padding-top: 25px;
+    border-top: none; /* Remove any existing border to avoid duplication */
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .section-title {
