Added link to graphics

--- a/project_new.html
+++ b/project_new.html
@@ -936,7 +936,7 @@
         </div>
         <div class="sidebar-item">
             <i class="material-icons">brush</i>
-            Graphics
+            <a href="projetc_new_graphics.html"> Graphics </a>
         </div>
         <div class="sidebar-item">
             <i class="material-icons">share</i>
