Updated add new with pop-up window

--- a/projetc_new_graphics.html
+++ b/projetc_new_graphics.html
@@ -817,11 +817,11 @@
         </div>
         <div class="sidebar-item">
             <i class="material-icons">search</i>
-            <span>Research</span>
+            <a href="project_new_research_page.html"> Research </a>
         </div>
         <div class="sidebar-item">
             <i class="material-icons">description</i>
-            <span>Content Draft</span>
+            <a href="project_new_content_draft.html"> Content Draft </a>
         </div>
         <div class="sidebar-item active">
             <i class="material-icons">brush</i>
