LInked to content drafts and graphics pages

--- a/project_new_research_page.html
+++ b/project_new_research_page.html
@@ -1368,11 +1368,11 @@ textarea.form-input {
         </div>
         <div class="nav-item">
             <i class="material-icons">description</i>
-            Content Draft
+            <a href="project_new_content_draft.html"> Content Draft</a>
         </div>
         <div class="nav-item">
             <i class="material-icons">brush</i>
-            Graphics
+            <a href="projetc_new_graphics.html"> Graphics</a>
         </div>
         <div class="nav-item">
             <i class="material-icons">share</i>
