--- a/project_new.html
+++ b/project_new.html
@@ -927,6 +927,10 @@
     <nav class="sidebar">
         <img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/d5/Florida_State_Seminoles_logo.svg/1200px-Florida_State_Seminoles_logo.svg.png" alt="FSU Logo" width="100">
         <div class="sidebar-item">
+            <i class="material-icons">home</i>
+            <a href="project_new.html"> Home </a>
+        </div>
+        <div class="sidebar-item">
             <i class="material-icons">search</i>
             <a href="project_new_research_page.html"> Research </a>
         </div>
@@ -940,11 +944,11 @@
         </div>
         <div class="sidebar-item">
             <i class="material-icons">share</i>
-            Marketing
+            <a href="projetc_new_marketing.html"> Marketing </a>
         </div>
         <div class="sidebar-item">
             <i class="material-icons">equalizer</i>
-            Analytics
+            <span>Analytics</span>
         </div>
     </nav>
 
