Link to marketing page

--- a/projetc_new_graphics.html
+++ b/projetc_new_graphics.html
@@ -1083,7 +1083,7 @@
         </div>
         <div class="sidebar-item">
             <i class="material-icons">share</i>
-            <span>Marketing</span>
+            <a href="projetc_new_marketing.html"> Marketing </a>
         </div>
         <div class="sidebar-item">
             <i class="material-icons">equalizer</i>
