Link to marketing page

--- a/project_new_content_draft.html
+++ b/project_new_content_draft.html
@@ -1330,7 +1330,7 @@
                     </div>
                     <div class="sidebar-item">
                         <i class="material-icons">search</i>
-                        <span>Research</span>
+                        <a href="project_new_research_page.html"> Research </a>
                     </div>
                     <div class="sidebar-item active">
                         <i class="material-icons">description</i>
@@ -1338,11 +1338,11 @@
                     </div>
                     <div class="sidebar-item">
                         <i class="material-icons">brush</i>
-                        <span>Graphics</span>
+                        <a href="projetc_new_graphics.html"> Graphics</a>
                     </div>
                     <div class="sidebar-item">
                         <i class="material-icons">share</i>
-                        <span>Marketing</span>
+                        <a href="projetc_new_marketing.html"> Marketing </a>
                     </div>
                     <div class="sidebar-item">
                         <i class="material-icons">equalizer</i>
