--- a/project_new_research_page.html
+++ b/project_new_research_page.html
@@ -1376,7 +1376,7 @@ textarea.form-input {
         </div>
         <div class="nav-item">
             <i class="material-icons">share</i>
-            Marketing
+            <a href="projetc_new_marketing.html"> Marketing </a>
         </div>
         <div class="nav-item">
             <i class="material-icons">equalizer</i>
