--- a/project_new.html
+++ b/project_new.html
@@ -947,6 +947,10 @@
             <a href="projetc_new_marketing.html"> Marketing </a>
         </div>
         <div class="sidebar-item">
+            <i class="material-icons">publish</i>
+            <span>Publish</span>
+        </div>
+        <div class="sidebar-item">
             <i class="material-icons">equalizer</i>
             <span>Analytics</span>
         </div>
