--- a/project_new.html
+++ b/project_new.html
@@ -948,7 +948,7 @@
         </div>
         <div class="sidebar-item">
             <i class="material-icons">publish</i>
-            <span>Publish</span>
+            <a href="project_new_publish.html"> Publish </a>
         </div>
         <div class="sidebar-item">
             <i class="material-icons">equalizer</i>
