link to publish

--- a/projetc_new_marketing.html
+++ b/projetc_new_marketing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Athlyte Content Publishing Platform - FSU Graphics</title>
+    <title>Athlyte Content Publishing Platform - FSU Marketing</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css" rel="stylesheet">
     <style>
         :root {
@@ -952,6 +952,10 @@
         <div class="sidebar-item active">
             <i class="material-icons">share</i>
             <span>Marketing</span>
+        </div>
+        <div class="sidebar-item">
+            <i class="material-icons">publish</i>
+            <a href="project_new_publish.html"> Publish </a>
         </div>
         <div class="sidebar-item">
             <i class="material-icons">equalizer</i>
