link to publish

--- a/projetc_new_graphics.html
+++ b/projetc_new_graphics.html
@@ -1086,6 +1086,10 @@
             <a href="projetc_new_marketing.html"> Marketing </a>
         </div>
         <div class="sidebar-item">
+            <i class="material-icons">publish</i>
+            <a href="project_new_publish.html"> Publish </a>
+        </div>
+        <div class="sidebar-item">
             <i class="material-icons">equalizer</i>
             <span>Analytics</span>
         </div>
