link to publish

--- a/project_new_content_draft.html
+++ b/project_new_content_draft.html
@@ -1342,7 +1342,11 @@
                     </div>
                     <div class="sidebar-item">
                         <i class="material-icons">share</i>
-                        <a href="projetc_new_marketing.html"> Marketing </a>
+                        <a href="projetc_new_marketing.html"> Marketing</a>
+                    </div>
+                    <div class="sidebar-item">
+                        <i class="material-icons">publish</i>
+                        <a href="project_new_publish.html"> Publish</a>
                     </div>
                     <div class="sidebar-item">
                         <i class="material-icons">equalizer</i>
