--- a/project_new_research_page.html
+++ b/project_new_research_page.html
@@ -1364,23 +1364,23 @@ textarea.form-input {
         </div>
         <div class="sidebar-item active">
             <i class="material-icons">search</i>
-            <a href="project_new_research_page.html"> Research </a>
+            <span>Research</span>
         </div>
         <div class="sidebar-item">
             <i class="material-icons">description</i>
-            <a href="project_new_content_draft.html"> Content Draft </a>
+            <a href="project_new_content_draft.html"> Content Draft</a>
         </div>
         <div class="sidebar-item">
             <i class="material-icons">brush</i>
-            <span>Graphics</span>
+            <a href="projetc_new_graphics.html"> Graphics</a>
         </div>
         <div class="sidebar-item">
             <i class="material-icons">share</i>
-            <a href="projetc_new_marketing.html"> Marketing </a>
+            <a href="projetc_new_marketing.html"> Marketing</a>
         </div>
         <div class="sidebar-item">
             <i class="material-icons">publish</i>
-            <a href="project_new_publish.html"> Publish </a>
+            <a href="project_new_publish.html"> Publish</a>
         </div>
         <div class="sidebar-item">
             <i class="material-icons">equalizer</i>
