--- a/project_new_research_page.html
+++ b/project_new_research_page.html
@@ -1356,37 +1356,38 @@ textarea.form-input {
     <!-- Comprehensive Dashboard Structure with Header and Buttons -->
 <div class="dashboard">
     <!-- Sidebar -->
-    <nav class="sidebar">
+    <aside class="sidebar">
         <img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/d5/Florida_State_Seminoles_logo.svg/1200px-Florida_State_Seminoles_logo.svg.png" alt="FSU Logo" width="100">
-        <div class="sidebar-item">
+        <div class="nav-item">
             <i class="material-icons">home</i>
-            <a href="project_new.html"> Home </a>
+            <a href="project_new.html"> Home</a>
         </div>
-        <div class="sidebar-item active">
+        <div class="nav-item active">
             <i class="material-icons">search</i>
-            <span>Research</span>
+            Research
         </div>
-        <div class="sidebar-item">
+        <div class="nav-item">
             <i class="material-icons">description</i>
             <a href="project_new_content_draft.html"> Content Draft</a>
         </div>
-        <div class="sidebar-item">
+        <div class="nav-item">
             <i class="material-icons">brush</i>
             <a href="projetc_new_graphics.html"> Graphics</a>
         </div>
-        <div class="sidebar-item">
+        <div class="nav-item">
             <i class="material-icons">share</i>
             <a href="projetc_new_marketing.html"> Marketing</a>
         </div>
-        <div class="sidebar-item">
-            <i class="material-icons">publish</i>
+        <div class="nav-item">
+            <i class="material-icons">share</i>
             <a href="project_new_publish.html"> Publish</a>
         </div>
-        <div class="sidebar-item">
+        
+        <div class="nav-item">
             <i class="material-icons">equalizer</i>
-            <span>Analytics</span>
+            Analytics
         </div>
-    </nav>
+    </aside>
 
     <!-- Main Content Area -->
     <div class="content-area">
