--- a/project_new_publish.html
+++ b/project_new_publish.html
@@ -236,13 +236,17 @@
             <i class="material-icons">description</i>
             <a href="project_new_content_draft.html"> Content Draft </a>
         </div>
-        <div class="sidebar-item active">
+        <div class="sidebar-item">
             <i class="material-icons">brush</i>
             <span>Graphics</span>
         </div>
         <div class="sidebar-item">
             <i class="material-icons">share</i>
             <a href="projetc_new_marketing.html"> Marketing </a>
+        </div>
+        <div class="sidebar-item active">
+            <i class="material-icons">publish</i>
+            <span>Publish</span>
         </div>
         <div class="sidebar-item">
             <i class="material-icons">equalizer</i>
