--- a/project_new_analytics.html
+++ b/project_new_analytics.html
@@ -250,7 +250,7 @@
         </div>
         <div class="sidebar-item active">
             <i class="material-icons">equalizer</i>
-            <span>Analytics</span>
+            <a href="project_new_analytics.html"> Analytics</a>
         </div>
     </nav>
 
