linked to analytics

--- a/project_new_research_page.html
+++ b/project_new_research_page.html
@@ -1385,7 +1385,7 @@ textarea.form-input {
         
         <div class="nav-item">
             <i class="material-icons">equalizer</i>
-            Analytics
+            <a href="project_new_analytics.html"> Analytics</a>
         </div>
     </aside>
 
