--- a/projetc_new_graphics.html
+++ b/projetc_new_graphics.html
@@ -1091,7 +1091,7 @@
         </div>
         <div class="sidebar-item">
             <i class="material-icons">equalizer</i>
-            <span>Analytics</span>
+            <a href="project_new_analytics.html"> Analytics</a>
         </div>
     </nav>
 
