--- a/projetc_new_marketing.html
+++ b/projetc_new_marketing.html
@@ -959,7 +959,7 @@
         </div>
         <div class="sidebar-item">
             <i class="material-icons">equalizer</i>
-            <span>Analytics</span>
+            <a href="project_new_analytics.html"> Analytics</a>
         </div>
     </nav>
 
