--- a/projects_overview.html
+++ b/projects_overview.html
@@ -451,7 +451,7 @@
                     >
                         <strong
                             ><a
-                                href="project_page.html"
+                                href="project_new.html"
                                 style="
                                     color: inherit;
                                     text-decoration: none;
@@ -627,7 +627,7 @@
                             class="user-image"
                         />
                     </div>
-                   
+
             </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
