updated home to overview page

--- a/project_new.html
+++ b/project_new.html
@@ -1355,7 +1355,7 @@
             />
             <div class="sidebar-item">
                 <i class="material-icons">home</i>
-                <a href="project_new.html"> Home </a>
+                <a href="projects_overview.html"> Home </a>
             </div>
             <div class="sidebar-item">
                 <i class="material-icons">search</i>
