link to overview

--- a/project_new.html
+++ b/project_new.html
@@ -1358,6 +1358,10 @@
                 <a href="projects_overview.html"> Home </a>
             </div>
             <div class="sidebar-item">
+                <i class="material-icons">assignment</i>
+                <a href="project_new.html"> Project </a>
+            </div>
+            <div class="sidebar-item">
                 <i class="material-icons">search</i>
                 <a href="project_new_research_page.html"> Research </a>
             </div>
