links to overview and project page

--- a/project_new.html
+++ b/project_new.html
@@ -1357,9 +1357,9 @@
                 <i class="material-icons">home</i>
                 <a href="projects_overview.html"> Home </a>
             </div>
-            <div class="sidebar-item">
+            <div class="sidebar-item active">
                 <i class="material-icons">assignment</i>
-                <a href="project_new.html"> Project </a>
+                <span>Project</span>
             </div>
             <div class="sidebar-item">
                 <i class="material-icons">search</i>
