--- a/project_new_analytics.html
+++ b/project_new_analytics.html
@@ -496,7 +496,11 @@
             />
             <div class="sidebar-item">
                 <i class="material-icons">home</i>
-                <a href="project_new.html"> Home </a>
+                <a href="projects_overview.html"> Home </a>
+            </div>
+            <div class="sidebar-item">
+                <i class="material-icons">assignment</i>
+                <a href="project_new.html"> Project </a>
             </div>
             <div class="sidebar-item">
                 <i class="material-icons">search</i>
