--- a/project_new_publish.html
+++ b/project_new_publish.html
@@ -1210,7 +1210,11 @@
             />
             <div class="sidebar-item">
                 <i class="material-icons">home</i>
-                <a href="project_new.html"> Home </a>
+                <a href="projects_overview.html"> Home </a>
+            </div>
+            <div class="sidebar-item">
+                <i class="material-icons">assignment</i>
+                <a href="project_new.html"> Project </a>
             </div>
             <div class="sidebar-item">
                 <i class="material-icons">search</i>
@@ -1222,7 +1226,7 @@
             </div>
             <div class="sidebar-item">
                 <i class="material-icons">brush</i>
-                <span>Graphics</span>
+                <a href="projetc_new_graphics.html"> Graphics </a>
             </div>
             <div class="sidebar-item">
                 <i class="material-icons">share</i>
