--- a/project_new_research_page.html
+++ b/project_new_research_page.html
@@ -1465,11 +1465,15 @@ textarea.form-input {
         <img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/d5/Florida_State_Seminoles_logo.svg/1200px-Florida_State_Seminoles_logo.svg.png" alt="FSU Logo" width="100">
         <div class="nav-item">
             <i class="material-icons">home</i>
-            <a href="project_new.html"> Home</a>
+            <a href="projects_overview.html"> Home </a>
+        </div>
+        <div class="nav-item">
+            <i class="material-icons">assignment</i>
+            <a href="project_new.html"> Project </a>
         </div>
         <div class="nav-item active">
             <i class="material-icons">search</i>
-            Research
+            <span>Research</span>
         </div>
         <div class="nav-item">
             <i class="material-icons">description</i>
