--- a/projetc_new_marketing.html
+++ b/projetc_new_marketing.html
@@ -987,7 +987,11 @@
         <img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/d5/Florida_State_Seminoles_logo.svg/1200px-Florida_State_Seminoles_logo.svg.png" alt="FSU Logo" width="100">
         <div class="sidebar-item">
             <i class="material-icons">home</i>
-            <a href="project_new.html"> Home </a>
+            <a href="projects_overview.html"> Home </a>
+        </div>
+        <div class="sidebar-item">
+            <i class="material-icons">assignment</i>
+            <a href="project_new.html"> Project </a>
         </div>
         <div class="sidebar-item">
             <i class="material-icons">search</i>
