changed breaking news

--- a/project_new_research_page.html
+++ b/project_new_research_page.html
@@ -1689,11 +1689,11 @@ textarea.form-input {
                         <!-- Story Card 1 -->
                         <div class="story-card" data-story-id="1">
                             <div class="story-image" style="background-image: url('https://via.placeholder.com/300x200');">
-                                <div class="story-tag">Football</div>
+                                <div class="story-tag">FSU Football</div>
                             </div>
                             <div class="story-content">
-                                <h3 class="story-title">Jordan Travis Named ACC Player of the Week</h3>
-                                <p class="story-excerpt">FSU quarterback earns honors after record-breaking performance against Miami.</p>
+                                <h3 class="story-title">Trey Benson goes OFF! </h3>
+                                <p class="story-excerpt">💥 Shatters his personal best with 200 rushing yards, surpassing his previous record of 163! 🏃💨 #GoNoles.</p>
                                 <div class="story-meta">
                                     <span class="story-date">Nov 21, 2024</span>
                                     <button class="story-select-btn">Select</button>
@@ -1704,11 +1704,11 @@ textarea.form-input {
                         <!-- Story Card 2 -->
                         <div class="story-card" data-story-id="2">
                             <div class="story-image" style="background-image: url('https://via.placeholder.com/300x200');">
-                                <div class="story-tag">Basketball</div>
+                                <div class="story-tag">FSU Football</div>
                             </div>
                             <div class="story-content">
-                                <h3 class="story-title">Women's Basketball Upsets #3 Notre Dame</h3>
-                                <p class="story-excerpt">Seminoles pull off stunning victory in overtime thriller at the Tucker Center.</p>
+                                <h3 class="story-title">Another dominant performance!</h3>
+                                <p class="story-excerpt">Trey Benson now has 6 games with 100+ yards and 2 with 150+ yards after torching Virginia Tech! 🔥 #FSU</p>
                                 <div class="story-meta">
                                     <span class="story-date">Nov 18, 2024</span>
                                     <button class="story-select-btn">Select</button>
@@ -1719,11 +1719,11 @@ textarea.form-input {
                         <!-- Story Card 3 -->
                         <div class="story-card" data-story-id="3">
                             <div class="story-image" style="background-image: url('https://via.placeholder.com/300x200');">
-                                <div class="story-tag">Track & Field</div>
+                                <div class="story-tag">FSU Football</div>
                             </div>
                             <div class="story-content">
-                                <h3 class="story-title">Trey Cunningham Sets NCAA Record in 110m Hurdles</h3>
-                                <p class="story-excerpt">All-American continues dominant season with another record-breaking performance.</p>
+                                <h3 class="story-title">Benson > VT's entire backfield!</h3>
+                                <p class="story-excerpt">Trey Benson exploded for 200 yards, outgaining Virginia Tech's top rusher Kyron Drones (80 yards) by a mile! 🚀 #Noles</p>
                                 <div class="story-meta">
                                     <span class="story-date">Nov 15, 2024</span>
                                     <button class="story-select-btn">Select</button>
@@ -1734,11 +1734,12 @@ textarea.form-input {
                         <!-- Story Card 4 -->
                         <div class="story-card" data-story-id="4">
                             <div class="story-image" style="background-image: url('https://via.placeholder.com/300x200');">
-                                <div class="story-tag">Volleyball</div>
+                                <div class="story-tag">FSU Football</div>
                             </div>
                             <div class="story-content">
-                                <h3 class="story-title">Volleyball Team Advances to NCAA Sweet Sixteen</h3>
-                                <p class="story-excerpt">Seminoles sweep Georgia Tech to advance in NCAA Tournament.</p>
+                                <h3 class="story-title">🚨 History Made! 🚨</h3>
+                                <p class="story-excerpt">Trey Benson just set the all-time rushing record for any FSU player against Virginia Tech with 200 yards on the ground! 
+                                    🌟🏆He surpasses Greg Jones 2002 performance of 120 yards vs. the Hokies. What a performance! 🔥#GoNoles | #TreyBenson | #RecordBreaker</p>
                                 <div class="story-meta">
                                     <span class="story-date">Nov 14, 2024</span>
                                     <button class="story-select-btn">Select</button>
@@ -1749,11 +1750,11 @@ textarea.form-input {
                         <!-- Story Card 5 -->
                         <div class="story-card" data-story-id="5">
                             <div class="story-image" style="background-image: url('https://via.placeholder.com/300x200');">
-                                <div class="story-tag">Swimming</div>
+                                <div class="story-tag">FSU Football</div>
                             </div>
                             <div class="story-content">
-                                <h3 class="story-title">Seminole Swimmers Qualify for Olympic Trials</h3>
-                                <p class="story-excerpt">Three FSU swimmers earn qualifying times for 2028 Olympic Trials.</p>
+                                <h3 class="story-title">🔥 Consistency King! 🔥</h3>
+                                <p class="story-excerpt">Trey Benson just logged his 4th consecutive game with 50+ rushing yards against AAC opponents! 💨💪Dominating the ground game and keeping the streak alive! 🚀🏆#GoNoles | #TreyBenson | #GroundGameStrong</p>
                                 <div class="story-meta">
                                     <span class="story-date">Nov 10, 2024</span>
                                     <button class="story-select-btn">Select</button>
@@ -1764,11 +1765,26 @@ textarea.form-input {
                         <!-- Story Card 6 -->
                         <div class="story-card" data-story-id="6">
                             <div class="story-image" style="background-image: url('https://via.placeholder.com/300x200');">
-                                <div class="story-tag">Soccer</div>
+                                <div class="story-tag">FSU Football</div>
                             </div>
                             <div class="story-content">
-                                <h3 class="story-title">Women's Soccer Clinches ACC Championship</h3>
-                                <p class="story-excerpt">Seminoles defeat Virginia 2-1 in championship match for third title in five years.</p>
+                                <h3 class="story-title">🚀 Trey Benson hits a new gear!</h3>
+                                <p class="story-excerpt">Breaks his career-long rush with an 85-yard sprint vs. Virginia Tech, smashing his previous best of 55 yards vs. Pitt earlier this season! 🔥💨 #GoNoles #FSU</p>
+                                <div class="story-meta">
+                                    <span class="story-date">Nov 8, 2024</span>
+                                    <button class="story-select-btn">Select</button>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Story Card 7 -->
+                        <div class="story-card" data-story-id="6">
+                            <div class="story-image" style="background-image: url('https://via.placeholder.com/300x200');">
+                                <div class="story-tag">FSU Football</div>
+                            </div>
+                            <div class="story-content">
+                                <h3 class="story-title">🔥 Trey Benson turns on the jets!</h3>
+                                <p class="story-excerpt">His 85-yard dash vs. Virginia Tech is the longest rush by any FSU player in the 2023 season! 🚀💨 #GoNoles #FSU</p>
                                 <div class="story-meta">
                                     <span class="story-date">Nov 8, 2024</span>
                                     <button class="story-select-btn">Select</button>
