--- a/projects_overview.html
+++ b/projects_overview.html
@@ -16,9 +16,9 @@
 
             .center-align  {
                 
-                margin-bottom: -10px;
+                margin-bottom: 15px;
                 padding: 0 20px;
-                display: flex;
+                display: inline-flex;                ;
                 height: 150px;
                 width: 150px;
                 align-items: center;
@@ -40,53 +40,98 @@
             }
 
             .create-project-btn {
-                background-color: #73d2e7;
-                color: white;
-                display: flex;
-                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-                align-items: center;
-                padding: 0 20px;
-                height: 36px;
-                border: none;
-                border-radius: 4px;
-                cursor: pointer;
-                font-weight: 500;
-                text-decoration: none;
-                transition: opacity 0.3s ease;
-            }
+    background-color: #73d2e7;
+    color: white;
+    display: flex;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    align-items: center;
+    padding: 0 20px;
+    height: 36px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: 500;
+    text-decoration: none;
+    transition: all 0.3s ease;  /* Changed from opacity to all */
+}
 
-            .create-project-btn:hover {
-                opacity: 0.9;
-            }
+.create-project-btn:hover {
+    background-color: #5cbfd6;  /* Slightly darker shade */
+    transform: translateY(-2px);
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+}
 
-            .create-project-btn i {
-                margin-right: 8px;
-            }
+.btn {
+    text-transform: none;
+    background-color: #73d2e7;
+    color: white;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-left: 10px;
+    padding: 0 20px;
+    height: 36px; 
+    display: flex; 
+    align-items: center;
+    border-radius: 4px;
+    text-decoration: none;
+    transition: all 0.3s ease;  /* Added transition */
+}
 
-            .btn {
-                text-transform: none;
-                background-color: #73d2e7;
-                color: white;
-                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-                margin-left: 10px;
-                padding: 0 20px;
-                height: 36px; 
-                display: flex; 
-                align-items: center;
-                border-radius: 4px;
-                text-decoration: none;
-            }
+.btn:hover {
+    background-color: #5cbfd6;  /* Slightly darker shade */
+    transform: translateY(-2px);
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+}
+.view-selector {
+    background-color: #73d2e7;
+    color: white;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border: none;
+    border-radius: 4px;
+    padding: 8px;
+    width: 200px;
+    height: 36px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    transition: all 0.3s ease;
+}
 
-            .view-selector {
-                background-color: #73d2e7;
-                color: white;
-                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-                border: none;
-                border-radius: 4px;
-                padding: 8px;
-                width: 200px;
-                height: 36px;
-            }
+.view-selector:hover {
+    background-color: #5cbfd6;
+    transform: translateY(-2px);
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+}
+
+/* Style for dropdown options */
+.view-selector option {
+    background-color: #73d2e7;
+    color: white;
+    padding: 12px;
+    border-radius: 4px;
+}
+
+/* Custom dropdown arrow */
+.select-wrapper {
+    position: relative;
+    display: inline-block;
+}
+
+.select-wrapper::after {
+    content: '▼';
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    pointer-events: none;
+    color: white;
+    font-size: 12px;
+    transition: transform 0.3s ease;
+}
+
+.select-wrapper:hover::after {
+    transform: translateY(-50%) rotate(180deg);
+}
+
             .chip-container {
                 position: absolute;
                 bottom: 10px;
@@ -110,7 +155,7 @@
             }
 
             body {
-                background-color: white;
+                background-color: rgb(236, 234, 234);
             }
 
             .kanban-container {
