updated colour palette

--- a/create_project.html
+++ b/create_project.html
@@ -19,20 +19,20 @@
             }
 
             body {
-                background-color: var(--fsu-garnet);
+                background-color: rgb(236, 234, 234);
                 color: #333;
                 padding: 20px 0;
             }
 
             .create-project-form {
-                background-color: white;
+                background-color: #73d2e7;
                 padding: 30px;
                 border-radius: 8px;
                 box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             }
 
             .page-title {
-                color: var(--fsu-garnet);
+                color: white;
                 margin: 0;
                 padding-bottom: 20px;
                 border-bottom: 2px solid var(--fsu-gold);
@@ -40,7 +40,7 @@
             }
 
             .section-title {
-                color: var(--fsu-garnet);
+                color: white;
                 font-size: 1.5rem;
                 margin-top: 30px;
                 margin-bottom: 20px;
