--- a/create_project.html
+++ b/create_project.html
@@ -69,22 +69,24 @@
             }
 
             .team-member-chip .remove-member:hover {
-                color: var(--fsu-garnet);
+                color: white;
             }
 
             .add-member-button {
-                background-color: var(--fsu-garnet);
-                color: white;
+                background-color: white;
+                color: #73d2e7;
                 margin-top: 10px;
             }
 
             .submit-button {
-                background-color: var(--fsu-garnet);
+                background-color: white;
+                color: #73d2e7;
                 margin-top: 30px;
             }
 
             .cancel-button {
-                background-color: #9e9e9e;
+                background-color: white;
+                color: #73d2e7;
                 margin-top: 30px;
                 margin-right: 15px;
             }
@@ -166,7 +168,7 @@
                 left: 0;
                 font-size: 0.8rem;
                 cursor: text;
-                color: #9e9e9e;
+                color: white;
                 margin-left: 3rem;
             }
 
@@ -197,19 +199,19 @@
 }
 
 .home-button .btn-floating {
-  background-color: var(--fsu-gold);
+  background-color: #73d2e7;
 }
 
 .home-button .btn-floating i {
-  color: var(--fsu-garnet);
+  color: white;
 }
 
 .home-button .btn-floating:hover {
-  background-color: var(--fsu-garnet);
+  background-color: white;
 }
 
 .home-button .btn-floating:hover i {
-  color: var(--fsu-gold);
+  color: #73d2e7;
 }
 
         </style>
