--- a/archives.html
+++ b/archives.html
@@ -7,15 +7,67 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <style>
-      :root { --fsu-garnet: #782f40; --fsu-gold: #ceb888; }
-      body { background-color: var(--fsu-garnet); color: #fff; }
-      .archive-header { background-color: white; color: var(--fsu-garnet); padding: 20px; border-radius: 8px; margin: 20px 0; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
-      .filter-bar { margin-bottom: 20px; display: flex; justify-content: center; gap: 20px; background-color: var(--fsu-gold); padding: 15px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); color: var(--fsu-garnet); }
-      .filter-bar select, .filter-bar label { color: var(--fsu-garnet); border-radius: 8px; }
-      .browser-default { border-radius: 8px !important; padding: 8px; border: 1px solid var(--fsu-garnet); }
-      table { width: 100%; background-color: white; color: var(--fsu-garnet); border-radius: 8px; overflow: hidden; }
-      th, td { padding: 12px; border: 1px solid var(--fsu-gold); text-align: left; }
-      th { background-color: var(--fsu-gold); color: var(--fsu-garnet); }
+      :root { 
+        --fsu-garnet: #782f40; 
+        --fsu-gold: #ceb888; 
+      }
+
+      body { 
+        background-color: white; 
+        color: #fff; 
+      }
+
+      .archive-header { 
+        background-color: #73d2e7;
+        color: white; 
+        padding: 20px; 
+        border-radius: 8px; 
+        margin: 20px 0; 
+        text-align: center; 
+        box-shadow: 0 2px 4px rgba(0,0,0,0.1); 
+      }
+
+      .filter-bar { 
+        margin-bottom: 20px; 
+        display: flex; 
+        justify-content: center; 
+        gap: 20px; 
+        background-color: #73d2e7; 
+        padding: 15px; 
+        border-radius: 8px; 
+        box-shadow: 0 2px 4px rgba(0,0,0,0.1); 
+        color: black; 
+      }
+
+      .filter-bar select, .filter-bar label { 
+        color: black; 
+        border-radius: 8px; 
+      }
+
+      .browser-default { 
+        border-radius: 8px !important; 
+        padding: 8px; 
+        border: 1px solid black; 
+      }
+
+      table { 
+        width: 100%; 
+        background-color: white; 
+        color: black; 
+        border-radius: 8px; 
+        overflow: hidden; 
+      }
+
+      th, td { 
+        padding: 12px; 
+        border: 1px solid #73d2e7; 
+        text-align: left; 
+      }
+      
+      th { 
+        background-color: #73d2e7; 
+        color: white; 
+      }
       
       /* Add this to your existing style tag */
 .archive-header {
@@ -30,19 +82,19 @@
 }
 
 .home-button .btn-floating {
-  background-color: var(--fsu-gold);
+  background-color: #73d2e7;
 }
 
 .home-button .btn-floating i {
-  color: var(--fsu-garnet);
+  color: white;
 }
 
 .home-button .btn-floating:hover {
-  background-color: var(--fsu-garnet);
+  background-color: white;
 }
 
 .home-button .btn-floating:hover i {
-  color: var(--fsu-gold);
+  color: #73d2e7;
 }
 
     </style>
