--- a/calendar_new.html
+++ b/calendar_new.html
@@ -30,8 +30,11 @@
         }
 
         .header {
-            text-align: center;
-            margin-bottom: 30px;
+            display: flex; 
+            justify-content: space-between; 
+            align-items: center; 
+            margin-bottom: 20px;
+            
         }
 
         .center-align  {
