--- a/create_project.html
+++ b/create_project.html
@@ -78,10 +78,22 @@
                 margin-top: 10px;
             }
 
+            .add-member-button:hover {
+                background-color: rgb(236, 234, 234);  /* Slightly darker shade */
+                transform: translateY(-2px);
+                box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+            }
+
             .submit-button {
                 background-color: white;
                 color: #73d2e7;
                 margin-top: 30px;
+            }
+
+            .submit-button:hover {
+                background-color: rgb(236, 234, 234);  /* Slightly darker shade */
+                transform: translateY(-2px);
+                box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
             }
 
             .cancel-button {
@@ -89,6 +101,12 @@
                 color: #73d2e7;
                 margin-top: 30px;
                 margin-right: 15px;
+            }
+
+            .cancel-button:hover {
+                background-color: rgb(236, 234, 234);  /* Slightly darker shade */
+                transform: translateY(-2px);
+                box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
             }
 
             /* Modal Styles */
