linked to new project page

--- a/projects_overview.html
+++ b/projects_overview.html
@@ -267,7 +267,7 @@
                     >
                         <strong
                             ><a
-                                href="project_new.html"
+                                href="project_new_athylte.html"
                                 style="
                                     color: inherit;
                                     text-decoration: none;
